# account-abstraction

./: .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose.yaml  docker-compose.yml  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: aws-deploy-dev.yml  run-migrations.yml
contracts/: PermissionManager.sol  README.md  WhitelistSigner.sol  current_implementations.json  hardhat.config.ts  package-lock.json  package.json  sEOA.sol  skandha-config.json  tsconfig.json
contracts/contracts/: sEOA.sol  sEOAwith4337.sol
contracts/contracts/testing/: ERC20TokenMock.sol  FakeDdexSequencer.sol
contracts/scripts/: 7702.ts  delegateSeoaWithKms.ts  deployAndDelegate.ts  deployForE2eTests.ts  deploySeoaImplementation.ts  sEOAwith4337.ts  showmetx.ts  utils.ts
contracts/test/: 7702.ts  helpers.ts  kzg.ts  sEOA.ts  sEOAwith4337.ts  sEOAwithBlobs.ts
hardhat/scripts/: create2.ts
hardhat/test/: errorHelper.ts
infrastructure/: build_workers.sh
infrastructure/aws/: README.md  samconfig.toml  template.yml
local_setup/: README.md
local_setup/blob_test_files/: blob_1.json  blob_2.json  blob_3.json
local_setup/docker/: .env.local  Dockerfile  docker-compose.yml
rust/aws_secrets/: Cargo.toml
rust/aws_secrets/src/: lib.rs
rust/blob_storage/: Cargo.toml
rust/blob_storage/src/storage/: mod.rs
rust/database/execution_attempt_db/: Cargo.toml
rust/database/execution_attempt_db/src/: execution_attempts.rs
rust/database/migrator/: Cargo.toml
rust/database/migrator/src/: lib.rs
rust/database/tables/execution_attempt_db/: Cargo.toml
rust/database/tables/execution_attempt_db/src/: execution_attempts.rs  lib.rs  retry_types.rs  types.rs
rust/database/tables/tx_input/standard_tx_input_db/: Cargo.toml
rust/database/tables/tx_input/standard_tx_input_db/src/: standard_tx_inputs.rs
rust/database/tx_request_db/: Cargo.toml
rust/database/tx_request_db/src/: lib.rs  tx_requests.rs
rust/e2e_test/: Cargo.toml
rust/e2e_test/src/: constants.rs  contract.rs  fixture.rs  lib.rs  tx_request.rs
rust/e2e_test/src/aws/: config.rs  event_bridge.rs  mod.rs  s3.rs  sqs.rs
rust/e2e_test/src/aws/sqs/: event.rs  mod.rs  receipt_poller_queue.rs  retry_queue.rs  sender_queue.rs  test_queue.rs
rust/e2e_test/src/db/: execution_attempt.rs  mod.rs  network.rs  operator_wallet.rs
rust/e2e_test/tests/: blob_happy_path.rs  blob_happy_path_two_tx.rs  entrypoint.rs  happy_path.rs  standard_happy_path.rs
rust/e2e_test/tests/blob_tx/: blob_happy_path.rs  blob_happy_path_two_tx.rs  mod.rs
rust/e2e_test/tests/blob_tx/happy_path/: happy_path_single_blob_tx.rs  happy_path_two_blob_tx.rs  mod.rs
rust/e2e_test/tests/standard_tx/: mod.rs  standard_happy_path.rs
rust/e2e_test/tests/standard_tx/fail_path/: expired_standard_tx.rs  mod.rs
rust/e2e_test/tests/standard_tx/happy_path/: happy_path_single_standard_tx.rs  mod.rs
rust/e2e_test/tests/standard_tx/retry_path/: mod.rs  retry_path_standard_dropped.rs  retry_path_standard_reverted.rs  retry_path_standard_tx_dropped.rs  retry_path_standard_tx_stuck.rs
rust/migrations/: 20260105112635_create_networks.sql  20260219143921_create_transactions.sql  20260303105842_create_operator_wallets.sql  20260303113502_create_transaction_assignments.sql
rust/migrator/: Cargo.toml
rust/migrator/src/: lib.rs
rust/operator_wallet_db/: Cargo.toml
rust/outcome_emitter/: Cargo.toml
rust/outcome_emitter/src/: constants.rs  lib.rs  outcome.rs
rust/outcome_emitter/src/emitter/: event_bridge.rs  mod.rs
rust/queues/sender_queues/standard_sender_queue/: Cargo.toml
rust/queues/sender_queues/standard_sender_queue/src/: lib.rs
rust/queues/sqs_queue/: Cargo.toml
rust/queues/sqs_queue/src/: event.rs  lib.rs  message_body.rs  parser.rs  queue.rs
rust/receipt_poller/: Cargo.toml
rust/receipt_poller/src/: lib.rs  receipt.rs
rust/receipt_poller/src/orchestrator/: aws.rs
rust/retry_handler/: Cargo.toml
rust/retry_handler/src/: error.rs  lib.rs  transaction.rs
rust/retry_handler/src/orchestrator/: aws.rs
rust/sender/: Cargo.toml
rust/sender_queue/: Cargo.toml
rust/seoa_contract/: Cargo.toml
rust/seoa_contract/src/: contract.rs  transaction.rs
rust/signer/: Cargo.toml
rust/signer/src/: lib.rs  signature.rs  wallet.rs
rust/signer/src/calldata/: mod.rs  tests.rs
rust/signer/src/transaction_request/: mod.rs
rust/signer/src/transaction_request/sqs/: mod.rs  tests.rs
rust/signer/tests/: aws_lambda_e2e.rs  aws_lambda_e2e.sh
rust/standard_tx_sender/: Cargo.toml
rust/transaction_assignment_db/: Cargo.toml
rust/transaction_assignment_db/src/: lib.rs  transaction_assignments.rs
rust/transaction_db/: Cargo.toml
rust/transaction_db/migrations/: 20260219143921_create_transactions.sql
rust/transaction_db/src/: lib.rs  transactions.rs
rust/transaction_sender/: Cargo.toml
rust/transaction_sender/src/: lib.rs  transaction.rs  wallet_pool.rs
rust/transaction_sender_queue/: Cargo.toml
rust/transaction_signer/: Cargo.toml  README.md
rust/transaction_signer/src/: calldata.rs  lib.rs
rust/transaction_signer/src/event/: mod.rs  sqs.rs
rust/transaction_signer/src/event/sqs/: mod.rs  tests.rs
rust/transaction_signer/src/transaction_request/: mod.rs
rust/transaction_signer/src/transaction_request/sqs/: mod.rs  tests.rs
rust/transaction_signer/src/tx_sender_trigger/: mod.rs  sqs.rs
rust/transaction_signer/tests/: aws_lambda_e2e.rs  aws_lambda_e2e.sh
rust/tx_request/: Cargo.toml
rust/tx_request/src/: blob.rs  blob_tx.rs  lib.rs  sqs_parser.rs  standard.rs
rust/tx_senders/standard_tx_sender/: Cargo.toml
rust/tx_senders/standard_tx_sender/src/: contract.rs  error.rs  execution_attempt.rs  lib.rs  transaction.rs
rust/tx_senders/standard_tx_sender/src/orchestrator/: aws.rs
rust/tx_signers/blob_tx_signer/: Cargo.toml
rust/tx_signers/blob_tx_signer/src/: lib.rs  signature.rs
rust/tx_signers/blob_tx_signer/src/blob_storage/: s3.rs
rust/wallet_pool/: Cargo.toml
rust/wallet_pool/src/: lib.rs  manager.rs  wallet.rs
scripts/: 4337.ts  7702.ts  utils.ts
test/: 7702.ts
(+109 files in other folders)
