[package]
name = "blob_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde.workspace = true
serde_json.workspace = true
tx_request = { workspace = true, features = ["aws"] }

# aws
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-s3 = { version = "1.131.0", optional = true }


[features]
aws = ["dep:aws-config", "dep:aws-sdk-s3"]
