[package]
name = "e2e_test"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["getrandom", "signer-mnemonic"] }
anyhow.workspace = true
db_types.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tx_request_db.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
migrator.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
network_db.workspace = true
signer_queue = { workspace = true, features = ["aws"] }
signer = { workspace = true, features = ["aws"] }
standard_tx_sender = { workspace = true, features = ["aws", "test-keys"] }
operator_wallet_db = { workspace = true, features = ["test-keys"] }
hex.workspace = true
receipt_poller_queue = { workspace = true, features = ["aws"] }
receipt_poller = { version = "0.1.0", path = "../receipt_poller", features = [
    "aws",
] }

aws_lambda_events = { workspace = true, features = ["sqs"], optional = true }
lambda_runtime = { workspace = true, optional = true }
aws-sdk-sqs = { workspace = true, optional = true }
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
retry_queue = { workspace = true, features = ["aws"] }
retry_handler = { workspace = true, features = ["aws"] }
sqs_queue = { workspace = true, optional = true }


[features]
aws = [
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
    "dep:aws-sdk-sqs",
    "dep:aws-config",
    "dep:sqs_queue",
]
