[package]
name = "migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

# aws feature:
aws-config = { version = "1.8.13", features = [
    "behavior-version-latest",
], optional = true }
lambda_runtime = { version = "1.0.2", optional = true }


[features]
aws = ["dep:aws-config", "dep:lambda_runtime"]
