[package]
name = "receipt_poller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
sqlx = { workspace = true, features = ["postgres", "time"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
execution_attempt_db.workspace = true
uuid.workspace = true
alloy.workspace = true
receipt_poller_queue = { workspace = true, features = ["aws"] }
network_db.workspace = true


# aws
aws-sdk-sqs = { workspace = true, optional = true }
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
aws_lambda_events = { workspace = true, features = ["sqs"], optional = true }
lambda_runtime = { workspace = true, optional = true }


[features]
aws = [
    "dep:aws-sdk-sqs",
    "dep:aws-config",
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
]
