[package]
name = "retry_handler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
sqlx = { workspace = true, features = ["postgres", "time"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
alloy.workspace = true


# aws
aws-sdk-sqs = { workspace = true, optional = true }
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
aws_lambda_events = { workspace = true, features = ["sqs"], optional = true }
lambda_runtime = { workspace = true, optional = true }
retry_queue = { version = "0.1.0", path = "../queues/retry_queue", features = [
    "aws",
] }


[features]
aws = [
    "dep:aws-sdk-sqs",
    "dep:aws-config",
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
]
