[package]
name = "retry_handler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
sqlx = { workspace = true, features = ["postgres", "time"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
alloy.workspace = true
execution_attempt_db.workspace = true
uuid.workspace = true
db_types.workspace = true
seoa_contract.workspace = true
wallet_pool.workspace = true
network_db.workspace = true
operator_wallet_db.workspace = true
tx_request_db.workspace = true
tx_input_types.workspace = true
retry_queue = { workspace = true, features = ["aws"] }
standard_tx_sender = { workspace = true, features = ["aws"] }
execution_attempt_item_db.workspace = true
sqs_queue.workspace = true
receipt_poller_queue = { workspace = true, features = ["aws"] }
outcome_emitter = { workspace = true, features = ["aws"] }

# aws
aws-sdk-sqs = { workspace = true, optional = true }
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
aws_lambda_events = { workspace = true, features = ["sqs"], optional = true }
lambda_runtime = { workspace = true, optional = true }
aws-sdk-eventbridge = { workspace = true, optional = true }
wallet_assignment_db.workspace = true


[features]
aws = [
    "dep:aws-sdk-sqs",
    "dep:aws-config",
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
    "dep:aws-sdk-eventbridge",
]

[[bin]]
name = "aws_retry_handler"
path = "src/bin/aws_lambda.rs"
