[package]
name = "seoa_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
alloy.workspace = true
execution_attempt_db.workspace = true
network_db.workspace = true
wallet_pool.workspace = true
uuid.workspace = true
tx_request_db.workspace = true
