[package]
name = "signer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
ow_wallet_adapter.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tx_request_db = { workspace = true }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
uuid.workspace = true
sender_queue = { workspace = true, features = ["aws"] }
db_types.workspace = true
signer_queue = { workspace = true, features = ["aws"] }
network_db.workspace = true

# aws
aws-sdk-sqs = { workspace = true, optional = true }
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
aws_lambda_events = { workspace = true, features = ["sqs"], optional = true }
lambda_runtime = { workspace = true, optional = true }

[dev-dependencies]
alloy = { workspace = true, features = ["node-bindings"] }

[features]
aws = [
    "dep:aws-sdk-sqs",
    "dep:aws-config",
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
]
