[package]
name = "transaction_assignment_db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "time",
    "uuid",
] }
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
