[package]
name = "transaction_db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "time",
] }
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

# aws feature:
aws-config = { version = "1.8.13", features = [
    "behavior-version-latest",
], optional = true }
aws_lambda_events = { version = "1.0.3", default-features = false, features = [
    "sqs",
], optional = true }
lambda_runtime = { version = "1.0.2", optional = true }


[features]
aws = ["dep:aws-config", "dep:aws_lambda_events", "dep:lambda_runtime"]
