[package]
name = "transaction_sender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
ow_wallet_adapter.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
transaction_db = { workspace = true }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
transaction_sender_queue = { workspace = true, features = ["aws"] }
transaction_assignment_db.workspace = true
operator_wallet_db.workspace = true
network_db.workspace = true
alloy = "1.6.3"
uuid.workspace = true

# aws
aws-sdk-sqs = { workspace = true, optional = true }
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
aws_lambda_events = { workspace = true, features = ["sqs"], optional = true }
lambda_runtime = { workspace = true, optional = true }


[features]
aws = [
    "dep:aws-sdk-sqs",
    "dep:aws-config",
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
]
