[package]
name = "transaction_signer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ow_wallet_adapter = "0.1.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
transaction_db = { workspace = true }
serde = "1.0.228"
serde_json = "1.0.149"
hex = "0.4.3"
sqlx = { version = "0.8.6", features = ["postgres"] }
# aws
aws-sdk-sqs = { version = "1.85.0", optional = true }
aws-config = { version = "1.8.13", features = [
    "behavior-version-latest",
], optional = true }
aws_lambda_events = { version = "1.0.3", default-features = false, features = [
    "sqs",
], optional = true }
lambda_runtime = { version = "1.0.2", optional = true }


[features]
aws = [
    "dep:aws-sdk-sqs",
    "dep:aws-config",
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
]
