[package]
name = "execution_attempt_db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
db_types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "time",
] }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
