[package]
name = "migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# aws feature:
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
lambda_runtime = { workspace = true, optional = true }


[features]
aws = ["dep:aws-config", "dep:lambda_runtime"]
