[package]
name = "standard_tx_sender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tx_request_db = { workspace = true }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
standard_sender_queue = { workspace = true, features = ["aws"] }
wallet_assignment_db.workspace = true
operator_wallet_db.workspace = true
network_db.workspace = true
alloy.workspace = true
uuid.workspace = true
execution_attempt_db.workspace = true
execution_attempt_item_db.workspace = true
db_types.workspace = true
receipt_poller_queue = { workspace = true, features = ["aws"] }
wallet_pool.workspace = true

# aws
aws-sdk-sqs = { workspace = true, optional = true }
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
aws_lambda_events = { workspace = true, features = ["sqs"], optional = true }
lambda_runtime = { workspace = true, optional = true }
sqs_queue = { workspace = true, optional = true }


[features]
aws = [
    "dep:aws-sdk-sqs",
    "dep:aws-config",
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
    "dep:sqs_queue",
]
test-keys = ["wallet_pool/test-keys"]
