[package]
name = "execution_attempt_db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
db_types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "time",
] }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
tx_request_db.workspace = true
tx_input_types.workspace = true
standard_tx_input_db.workspace = true
blob_tx_input_db.workspace = true
