[package]
name = "standard_sender_queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# aws feature
aws_lambda_events = { workspace = true, features = ["sqs"], optional = true }
lambda_runtime = { workspace = true, optional = true }
sqs_queue = { workspace = true, optional = true }


[features]
aws = ["dep:aws_lambda_events", "dep:lambda_runtime", "dep:sqs_queue"]
