[package]
name = "standard_tx_input_db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",

] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
